--- a/2021-2022/L3.md
+++ b/2021-2022/L3.md
@@ -37,7 +37,7 @@
 
 >子供｛が/の｝いる時に、たばこはすわないでください。
 <!-- -->
->雨｛が/の｝降る日は、家で本うぉ読んでいます。
+>雨｛が/の｝降る日は、家で本を読んでいます。
 
 ❗Pas dechangement dans la proposition subordonnée avec ため/から/ので
 >熱{❌の/✅が}あるから、会社を休みます。
@@ -57,7 +57,7 @@ Vdico / Vない + ことになる
 >この道は、来月から路上駐車ができない<span style="color:red">ことになった</span>。
 
 ＊自分で決めたことでも、それを言わないように「～ことになる」を使うときもある。
->会社をやめて、父の仕事を手伝う<span style="color:red">このになりました</span>。
+>会社をやめて、父の仕事を手伝う<span style="color:red">ことになりました</span>。
 
 ### ことになっている -> 予定や規則など
 
@@ -104,10 +104,10 @@ Vdico / Vない + このにしている
 
 >今週フランスから両親が来ている<span style="color:red">ものですから</span>、飲み会に行けないんです。
 <!-- -->
->先生：今日も宿題をして来なかったんですか。
+>先生：今日も宿題をして来なかったんですか。  
 学生：すみません。バイトが忙しかった<span style="color:red">ものですから</span>（宿題が出来ませんでした）。
 <!-- -->
->姉：また服をかったの。
+>姉：また服をかったの。  
 妹：バーゲンで、すごく安かった<span style="color:red">ものだから</span>（買いすぎちゃった）。
 	
 - ❗18歳になった｛✅から・✅ので・❌ものだから｝、車の運転ができますね。
@@ -135,10 +135,10 @@ Vdico / Vない + このにしている
 ## 7. ただ＋Vdico＋だけでいい
 ＊ただ：seulement　＊～だけでいい：il suffit de ~
 
->川田：マリーさん、フランス語を教えていただけないでしょうか。
+>川田：マリーさん、フランス語を教えていただけないでしょうか。  
 マリーさん：えっ、私が教えるんですか。それはちょっと。。。
 川田：<span style="color: red">ただ</span>発音を直してもらう<span style="color: red">だけでいい</span>んです。お願いします。
 <!-- -->
->町田：このスマホで写真をとる時は、どうすればいいんですか。
+>町田：このスマホで写真をとる時は、どうすればいいんですか。  
 青山：<span style="color: red">ただ</span>このボタンを押す<span style="color: red">だけでいい</span>んですよ。
  
