Replace arrows to ascii

--- a/2021-2022/L3.md
+++ b/2021-2022/L3.md
@@ -26,7 +26,7 @@
 <!-- -->
 >この数学の問題は、中学生<span style="color:red">には</span>難しい。
 
-## 2. 助詞の変化：が🠞の
+## 2. 助詞の変化：が->の
 - Dans la proposition déterminante
 
 >これは<u>父｛が/の｝かいた</u>絵です。
@@ -100,7 +100,7 @@ Vdico / Vない + このにしている
 	
 ## 5. 普通形(V/い ajd) / な adj な / Nを + ものですから: 「～から/ので」
 <原因・理由>  
-普通形の会話のとき🠞「～ものだから」「～もんだから」
+普通形の会話のとき->「～ものだから」「～もんだから」
 
 >今週フランスから両親が来ている<span style="color:red">ものですから</span>、飲み会に行けないんです。
 <!-- -->
@@ -114,13 +114,13 @@ Vdico / Vない + このにしている
 - ❗忙しい｛✅から・✅ので・❌ものですから｝手伝ってください。
 
 ## 6. Vて＋いただけないでしょうか
-とても丁寧な表現🠞上司・知らない人・親しくない人へのお願い。
+とても丁寧な表現->上司・知らない人・親しくない人へのお願い。
 
 >電子辞書の使い方を教え<span style="color:red">ていただけないでしょうか</span>。
 	
  ⭐ 丁寧のレベル（人によって少し違うことがある）
  
-	 高🠉 
+	 高
 	 1. 教えていただけないでしょうか
 	 2. 教えていただけませんか
 	 3. 教えてくださいませんか
@@ -130,7 +130,7 @@ Vdico / Vない + このにしている
 	 7. 教えなさい
 	 8. 教えてくれ
 	 9. 教えろ
-	 低🠋
+	 低
 	 
 ## 7. ただ＋Vdico＋だけでいい
 ＊ただ：seulement　＊～だけでいい：il suffit de ~
