--- a/2021-2022/L3.md
+++ b/2021-2022/L3.md
@@ -142,3 +142,25 @@ Vdico / Vない + このにしている
 >町田：このスマホで写真をとる時は、どうすればいいんですか。  
 青山：<span style="color: red">ただ</span>このボタンを押す<span style="color: red">だけでいい</span>んですよ。
  
+## 8 助詞＋は : Emphase
+
+
+- 「を」「が」-> 「<s>を</s>＋は」「<s>が</s>＋は」
+
+> ご飯を＋<span style="color:red">は</span>　食べた -> ご飯<span style="color:red">は</span>食べた。
+<!-- -->
+> 肉が＋<span style="color:red">は</span>　好きが -> 肉<span style="color:red">は</span>好きだ。
+
+- 「へ」「に」 -> 「<s>へ</s>＋は」「へ＋は」「<s>に</s>＋は」「に＋は」
+
+> モン・サン・ミッシェル{<span style="color:red">は</span>/へ<span style="color:red">は</span>}もう行きましたか。
+<!-- -->
+> 横浜も神戸も港町が、神戸{<span style="color:red">は</span>/に<span style="color:red">は</span>}空港がある。
+
+- 他の助詞 -> 「は」をつける
+
+> 駅まで<span style="color:red">は</span>徒歩で15分くらいかかる。
+<!-- -->
+> たくさん食べてしまいました、明日から<span style="color:red">は</span>ダイエットをするつもりです。
+<!-- -->
+>　田中さんと<span style="color:red">は</span>、一緒にフランスへ出張したこがある。
