--- a/2021-2022/L3.md
+++ b/2021-2022/L3.md
@@ -164,3 +164,67 @@ Vdico / Vない + このにしている
 > たくさん食べてしまいました、明日から<span style="color:red">は</span>ダイエットをするつもりです。
 <!-- -->
 >　田中さんと<span style="color:red">は</span>、一緒にフランスへ出張したこがある。
+
+## 9 連用中止 (「中級へ行こう」L5)
+
+
+V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なadj<s>な</s>->であり / N＋であり
+
+書き言葉的。改まった挨拶、手紙、報告文などによく使われる。
+
+<table>
+	<tr>
+		<th>助詞</th>
+		<td>読みます</td>
+		<td><span style="color:red">読み</span></td>
+		<th>助詞</th>
+		<td>います</td>
+		<td><span style="color:red">おり</span></td>
+	</tr>
+	<tr>
+		<th>い形容詞</th>
+		<td>大きい</td>
+		<td>大き<span style="color:red">く</span></td>
+  	</tr>
+	<tr>
+		<th>ない</th>
+		<td>ない</td>
+		<td>な<span style="color:red">く</span></td>
+  	</tr>
+	<tr>
+		<th>その他</th>
+		<td>~によって</td>
+		<td>~に<span style="color:red">より</span></td>
+		<th>その他</th>
+		<td>~ていて</td>
+		<td>~て<span style="color:red">おり</span></td>
+  	</tr>
+  	<tr>
+		<th>な形容詞</th>
+		<td>便利な</td>
+		<td>便利<span style="color:red">で</span></td>
+		<th>な形容詞</th>
+		<td>便利な</td>
+		<td>便利<span style="color:red">でおり</span></td>
+  	</tr>
+  	<tr>
+		<th>名詞</th>
+		<td>町</td>
+		<td>町<span style="color:red">で</span></td>
+		<th>名詞</th>
+		<td>町</td>
+		<td>町<span style="color:red">でおり</span></td>
+  	</tr>
+</table>
+
+> 祖母、毎朝新聞を<span style="color:red">読み</span>、コーヒーを飲む。
+<!-- -->
+> 紙の辞書はとても大き<span style="color:red">く</span>、重かった。
+<!-- -->
+> アプリの辞書はとても便利<span style="color:red">で</span>、使いやすかった。
+<!-- -->
+> 彼は高校の先生<span style="color:red">で</span>、英語を教えている。
+<!-- -->
+> みそ汁の色、地方に<span style="color:red">より</span>違う。
+<!-- -->
+> 朝起きたら雨が降って<span style="color:red">おり</span>、試合は中止になった。
