Start adding lesson 4

--- a/2021-2022/L3.md
+++ b/2021-2022/L3.md
@@ -228,3 +228,104 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 > みそ汁の色、地方に<span style="color:red">より</span>違う。
 <!-- -->
 > 朝起きたら雨が降って<span style="color:red">おり</span>、試合は中止になった。
+
+# 第4か
+
+## 1. 文脈指示：あれ/あの/それ/その (会話）
+
+- ア -> 話し手も聞き手も知っている場合 / ひとりごと
+- ソ -> 話し手か、聞き手か、どちらか一人だけが知っている場合 / 二人とも知らない場合
+- コ -> 話し手だけ知っている場合
+
+<hr>
+＊ア～
+> 安田：先週一緒に食事した田中せん、今度転職するんだって。
+<!-- -->
+> 木村：えっ、<span style="color:red">あの</span>人が？どこの会社？
+
+&emsp;&emsp;(安田さん：知っている・木村さん：知っている）
+
+===
+
+> 先週食べた、<span style="color:red">あの</span>カレーは、おいしかったなあ。
+
+&emsp;&emsp;(ひとりごと monologue）
+
+<hr>
+＊ソ～
+> 原田：「君の名は。」という日本の映画を知っていますか。昨日見ましたが、すごく面白かったですよ。
+<!-- -->
+>　川上：いいえ、知りません。<span style="color:red">その</span>映画は、アニメなんですか。
+
+&emsp;&emsp;（原田さん：知っている・川上：知らない）
+
+===
+
+> 真理：由美ちゃんの会社に、今年の新入社員、いるの。
+<!-- -->
+> 由美：うん、一人だけ。でも、やる気があって、毎朝8時に自転車で会社に来るんだよ。
+<!-- -->
+> 真理：へえ、<span style="color:red">その</span>人は家が近いの。
+<!-- -->
+> 由美：ううん、自転車で１時間半くらいかかるんだって。
+
+&emsp;&emsp;（真理さん：知らない・由美さん：知っている）
+
+===
+
+> 青山：山田さんは昔フランスに住んでいたようですが、<span style="color:red">その</span>ころの話を聞いたことがありますか。
+<!-- -->
+> 南田：いいえ。私も<span style="color:red">その</span>ころの話を聞いてみたいんですか、まだチャンスがなくて。
+&emsp;&emsp;（二人も知らない）
+
+<hr>
+
+＊コ～
+> 中川：友人がアマチュアのミュージシャンで歌を作ったんですが、<span style="color:red">これ</span>がすごくいいんですよ。
+長島：へえ、聞いてみたいですね。
+&emsp;&emsp;（中川さん：知っている・長島さん：知らない）
+
+## 2. Nのところ
+
+その人や物が「いる/ある場所、その近く、会社など所属する
+(faire partie de)ところ」の意味。
+
+> 部長：後で私<span style="color:red">のところ</span>に来てください。
+<!-- -->
+> 山田：はい、わかりました。
+
+&emsp;&emsp;❌　後で私に来てください。
+
+＝＝＝
+
+> 田中：あれ？めがねがない。
+<!-- -->
+> 山中：パソコン<span style="color:red">のところ</span>にあります。
+
+&emsp;&emsp;❌　パソコンにあります。
+
+===
+
+> 夏目：来週のミーティング、三島さん<span style="color:red">のところ</span>で出来ますか。
+> 三島：大丈夫ですよ？じゃあ、会議を予約しておきます。
+
+## 3. V(さ)せていただけたい：Vcausatif＋ていただけたい
+
+何かをしようという気持ちや許可のお願い、目上の人に強く伝える。
+
+<使役形＞  
+- 2e : たべ{-<span style="color:red">ます</span> / +<span style="color:green">させる</span>}
+- Irrégulier : <span style="color:green">させる</span> (来させる）
+- 1er : 読ま{-<span style="color:red">ない</span> / +<span style="color:green">せる</span>}
+
+> 新しいプロジェクトに、参加<span style="color:red">させていただきたい</span>んですが。
+<!-- -->
+> 来月の会議に、是非私も出席<span style="color:red">させていただきたい</span>んですが。
+<!-- -->
+> この小説の映画を、是非私に作ら<span style="color:red">せていただきたい</span>んです！
+
+<hr>
+
+> 頭が痛いので、帰ら<span style="color:red">せていただきたい</span>んですが。
+<!-- -->
+> 子供が病気なので、休ま<span style="color:red">せていただきたい</span>んですか。
