Fix missing spaces

--- a/2021-2022.md
+++ b/2021-2022.md
@@ -244,13 +244,13 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 <!-- -->
 > 木村：えっ、<span style="color:red">あの</span>人が？どこの会社？
 
-&emsp;&emsp;(安田さん：知っている・木村さん：知っている）
+&emsp;&emsp;（安田さん：知っている・木村さん：知っている）
 
 ===
 
 > 先週食べた、<span style="color:red">あの</span>カレーは、おいしかったなあ。
 
-&emsp;&emsp;(ひとりごと monologue）
+&emsp;&emsp;（ひとりごと monologue）
 
 <hr>
 ＊ソ～
@@ -278,6 +278,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 > 青山：山田さんは昔フランスに住んでいたようですが、<span style="color:red">その</span>ころの話を聞いたことがありますか。
 <!-- -->
 > 南田：いいえ。私も<span style="color:red">その</span>ころの話を聞いてみたいんですか、まだチャンスがなくて。
+
 &emsp;&emsp;（二人も知らない）
 
 <hr>
@@ -286,6 +287,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 
 > 中川：友人がアマチュアのミュージシャンで歌を作ったんですが、<span style="color:red">これ</span>がすごくいいんですよ。
 長島：へえ、聞いてみたいですね。
+
 &emsp;&emsp;（中川さん：知っている・長島さん：知らない）
 
 ## 2. Nのところ
