--- a/2021-2022.md
+++ b/2021-2022.md
@@ -1,10 +1,82 @@
-# Table of Contents
+# 目次
 1. [第1課](#chapter_1)
 2. [第2課](#chapter_2)
 3. [第3課](#chapter_3)
 4. [第4課](#chapter_4)
 
 # 第1課 <a name="chapter_1"></a>
+
+## 1. Vた＋ものだ
+
+過去の状態やよく起こったことを思い出して言う時の表現。
+
+> 学生の時、夏休みは、よく夜行列車に乗って旅をし<span style="color:red">たものだ</span>。
+
+<!-- -->
+> 弟は、小さいころ、質問ばかりして親を困らせ<span style="color:red">たものだ</span>。
+
+## 2. Vdico / Vない / いadjい / なadjな ＋ものだ　(普通）
+
+一般的に～である。(Bon sens / normal)
+
+> 赤ちゃんは泣く<span style="color:red">ものだ</span>。
+
+<!-- -->
+> 大学の4年間は、あっという間に過ぎてしまう<span style="color:red">ものだ</span>。
+
+<!-- -->
+> 性格なんて、そう簡単に変わらない<span style="color:red">ものだよ</span>。（変わる<span style="color:red">ものではない</span>よ）
+
+
+## 3. Vdico / Vない / いadjい / なadjな ＋ものだ　（べき）
+
+一般的に～をするのが常識だ・～をするべきだ。
+
+> お年寄りが電車に乗ってきたら、席を譲る<span style="color:red">ものだ</span>。
+
+<!-- -->
+> 小さい子供は9時前に寝る<span style="color:red">ものだ</span>。
+
+<!-- -->
+> お父さんが選んでくれたブローチなんだから、気に入らなくてもそんな顔をする<span style="color:red">ものじゃない</span>。
+
+### 4. 普通形 / なadjな / Nの ＋ため（に）　この / その ＋ため（に）
+＜原因・理由＞
+
+> 事故があった<span style="color:red">ため</span>（事故の<span style="color:red">ため</span>）、電車がなかなか来なかった。
+
+<!-- -->
+> コロナの<span style="color:red">ため</span>、東京オリンピックが1年遅く行われた。
+
+<!-- -->
+> 明日、台風が来るそうだ。<span style="color:red">そのため</span>、学校が休みになった。
+
+## 5. Vdico/Nの＋ため（に）
+
+＜目的＞
+
+> 朝9時の飛行機に乗る<span style="color:red">ため</span>、5時半に家を出ます。
+
+<!-- -->
+> 子供の教育<span style="color:red">のため</span>、毎さ5万円ずつ貯金しています。
+
+＊「～ため」は、＜原因・理由＞ですか、＜目的＞ですか。
+> 家を買うため、貯金をしている。＝＞　目的
+ 
+<!-- -->
+> 家を買ったため、貯金がなくなってしまった。＝＞　原因・理由
+
+<!-- -->
+> 仕事のため、お客さんとゴルフをする。　＝＞　目的
+
+<!-- -->
+> 仕事のため、週末も休めない。＝＞原因・理由
+
+<!-- -->
+> 会議に出席するため、新幹線に乗る。＝＞目的
+
+<!-- -->
+> 会議があるため、友達との約束をキャンセルしなければならない。＝＞原因・理由
 
 # 第2課 <a name="chapter_2"></a>
 
