Rename lesson and finish first one

--- a/2021-2022.md
+++ b/2021-2022.md
@@ -1,10 +1,11 @@
 # 目次
-1. [第1課](#chapter_1)
-2. [第2課](#chapter_2)
-3. [第3課](#chapter_3)
-4. [第4課](#chapter_4)
+1. [Rappels](#chapter_rappels)
+2. [第1課](#chapter_1)
+3. [第2課](#chapter_2)
+4. [第3課](#chapter_3)
+5. [第4課](#chapter_4)
 
-# 第1課 <a name="chapter_1"></a>
+# Rappels 中級へ行こう <a name="chapter_1"></a>
 
 ## 1. Vた＋ものだ
 
@@ -77,6 +78,55 @@
 
 <!-- -->
 > 会議があるため、友達との約束をキャンセルしなければならない。＝＞原因・理由
+
+## 6. によって
+
+1. 受身の時、行為をする人：  
+> 映画はリュミエール兄弟<span style="color:red">によって</span>発見されました。
+
+2. 状況で変わる：  
+> パソコンを買いたいが、お店<span style="color:red">によって</span>値段が違うので、一番安い店を探そう。
+
+3. 手段・方法：  
+> ロックダウン中でも、インターネット<span style="color:red">によって</span>、美術館の絵を見ることができた。
+
+## 7. 受身
+
+1er : 読ま<s>ない</s><span style="color:red">れる</span>
+ 
+2eme : 食べ<s>ない</s><span style="color:red">られる</span>
+
+Irrégulier : 
+
+- する -> <span style="color:red">される</span>
+- 来る -> <span style="color:red">来られる</span>
+
+## 8. 使役
+
+1er : 読ま<s>ない</s><span style="color:red">せる</span>
+ 
+2eme : 食べ<s>ない</s><span style="color:red">される</span>
+
+Irrégulier : 
+
+- する -> <span style="color:red">させる</span>
+- 来る -> <span style="color:red">来される</span>
+
+## 9. 使役受身：～（さ）さられる・～される
+
+1er : 
+
+- 読ま<s>ない</s><span style="color:red">せられる</span>・読ま<s>ない</s><span style="color:red">される</span>
+- 話さ<s>ない</s><span style="color:red">せられる</span> (❌される)
+
+2ème : たべ<s>ない</s><span style="color:red">させられる</span>
+
+Irrégulier :
+
+- する -> <span style="color:red">させられる</span>
+- 来る -> <span style="color:red">来させられる</span>
+
+# 第1課 <a name="chapter_1"></a>
 
 # 第2課 <a name="chapter_2"></a>
 
