--- a/2021-2022.md
+++ b/2021-2022.md
@@ -128,6 +128,54 @@ Irrégulier :
 
 # 第1課 <a name="chapter_1"></a>
 
+## 1. 合成語：～口
+
+1. 人や物が出入りする所。駅や建物などで、よく使われる。
+2. 移動動詞、役割、方角（東西南北）の言葉と一緒によく使われる。
+	- 移動動詞 (verbes de déplacement) : 出口、上り口
+	- 役割 (rôle) : 改札口、みどりの窓口
+	- 方角 (direction) : 東口
+	
+## 2. ～って / ～て
+
+＊引用(citation)の「と」（ex ~と言う / ～と思う）の話し言葉。   
+＊注意書きや看板などの読み方や意味を尋ねるとき使われる。
+＊直前が「何」のとき（「ん」のとき）->　「て」
+　直前が「ん」ではないとき　->　「って」
+　
+> デュボン：あれは何<span style="color:red">て</span>読むんですか。   
+> 田中：「きんえんせき」<span style="color:red">って</span>読むんですよ。
+
+<!-- -->
+> マルタン：すみません、さっきのアナウンスは何<span style="color:red">て</span>言っていたんですか。  
+> 横にいる人：事故で電車が遅れている<span style="color:red">って</span>言っていましたよ。
+
+## 3. Vはいい
+
+＊「Vばいいですか」…助言(conseil)や指示(indication)がほしい時にする質問の言い方。（「みんなの日本語初級」L35）   
+＊「Vばいい」…そうすることがいい考えだと勧める言い方。
+
+「ば」の形 :
+
+1er : 書<s>く</s> -> 書<span style="color:red">けば</span>
+
+2eme : 食べ<s>る</s> -> 食べ<span style="color:red">れば</span>
+
+Irrégulier :
+
+- する -> <span style="color:red">すれば</span>  
+- 来る -> <span style="color:red">来れば</span>
+
+> 山田：そのパソコンを使いたいんですが、田中さんに言えばいいですか。
+> 森川：いいえ、課長に言って許可をもらってください。
+
+<!-- -->
+> 東山：明日は何時ごろ来ればいいですか。
+> 町田：会議の準備があるので、８時に来てください。
+
+> マルタン：明日のテニスの試合、もうし雨が降ったら、とうすればいいですか。
+> 村山：室内のコートがありますから、そこで試合をすればいいですよ。
+
 # 第2課 <a name="chapter_2"></a>
 
 
