--- a/2021-2022.md
+++ b/2021-2022.md
@@ -166,15 +166,16 @@ Irrégulier :
 - する -> <span style="color:red">すれば</span>  
 - 来る -> <span style="color:red">来れば</span>
 
-> 山田：そのパソコンを使いたいんですが、田中さんに言えばいいですか。
+> 山田：そのパソコンを使いたいんですが、田中さんに言え<span style="color:red">ばいい</span>  ですか。
 > 森川：いいえ、課長に言って許可をもらってください。
 
 <!-- -->
-> 東山：明日は何時ごろ来ればいいですか。
+> 東山：明日は何時ごろ来れ<span style="color:red">ばいい</span>  ですか。  
 > 町田：会議の準備があるので、８時に来てください。
 
-> マルタン：明日のテニスの試合、もうし雨が降ったら、とうすればいいですか。
-> 村山：室内のコートがありますから、そこで試合をすればいいですよ。
+<!-- -->
+> マルタン：明日のテニスの試合、もうし雨が降ったら、とうすれ<span style="color:red">ばいい</span>  ですか。  
+> 村山：室内のコートがありますから、そこで試合をすれ<span style="color:red">ばいい</span>  ですよ。
 
 # 第2課 <a name="chapter_2"></a>
 
