Update table of content and add for every title custom a anchor

--- a/2021-2022.md
+++ b/2021-2022.md
@@ -1,13 +1,13 @@
 # 目次
-1. [Rappels](#chapter_rappels)
+1. [Rappels](#chapter_0)
 2. [第1課](#chapter_1)
 3. [第2課](#chapter_2)
 4. [第3課](#chapter_3)
 5. [第4課](#chapter_4)
 
-# Rappels 中級へ行こう <a name="chapter_1"></a>
+# Rappels 中級へ行こう <a name="chapter_0"></a>
 
-## 1. Vた＋ものだ
+## 1. Vた＋ものだ <a name="chapter_0_1"></a>
 
 過去の状態やよく起こったことを思い出して言う時の表現。
 
@@ -16,7 +16,7 @@
 <!-- -->
 > 弟は、小さいころ、質問ばかりして親を困らせ<span style="color:red">たものだ</span>。
 
-## 2. Vdico / Vない / いadjい / なadjな ＋ものだ　(普通）
+## 2. Vdico / Vない / いadjい / なadjな ＋ものだ　(普通）<a name="chapter_0_2"></a>
 
 一般的に～である。(Bon sens / normal)
 
@@ -29,7 +29,7 @@
 > 性格なんて、そう簡単に変わらない<span style="color:red">ものだよ</span>。（変わる<span style="color:red">ものではない</span>よ）
 
 
-## 3. Vdico / Vない / いadjい / なadjな ＋ものだ　（べき）
+## 3. Vdico / Vない / いadjい / なadjな ＋ものだ　（べき）<a name="chapter_0_3"></a>
 
 一般的に～をするのが常識だ・～をするべきだ。
 
@@ -41,7 +41,7 @@
 <!-- -->
 > お父さんが選んでくれたブローチなんだから、気に入らなくてもそんな顔をする<span style="color:red">ものじゃない</span>。
 
-### 4. 普通形 / なadjな / Nの ＋ため（に）　この / その ＋ため（に）
+### 4. 普通形 / なadjな / Nの ＋ため（に）　この / その ＋ため（に）<a name="chapter_0_4"></a>
 ＜原因・理由＞
 
 > 事故があった<span style="color:red">ため</span>（事故の<span style="color:red">ため</span>）、電車がなかなか来なかった。
@@ -52,7 +52,7 @@
 <!-- -->
 > 明日、台風が来るそうだ。<span style="color:red">そのため</span>、学校が休みになった。
 
-## 5. Vdico/Nの＋ため（に）
+## 5. Vdico/Nの＋ため（に）<a name="chapter_0_5"></a>
 
 ＜目的＞
 
@@ -79,7 +79,7 @@
 <!-- -->
 > 会議があるため、友達との約束をキャンセルしなければならない。＝＞原因・理由
 
-## 6. によって
+## 6. によって <a name="chapter_0_6"></a>
 
 1. 受身の時、行為をする人：  
 > 映画はリュミエール兄弟<span style="color:red">によって</span>発見されました。
@@ -90,7 +90,7 @@
 3. 手段・方法：  
 > ロックダウン中でも、インターネット<span style="color:red">によって</span>、美術館の絵を見ることができた。
 
-## 7. 受身
+## 7. 受身 <a name="chapter_0_7"></a>
 
 1er : 読ま<s>ない</s><span style="color:red">れる</span>
  
@@ -101,7 +101,7 @@ Irrégulier :
 - する -> <span style="color:red">される</span>
 - 来る -> <span style="color:red">来られる</span>
 
-## 8. 使役
+## 8. 使役 <a name="chapter_0_8"></a>
 
 1er : 読ま<s>ない</s><span style="color:red">せる</span>
  
@@ -112,7 +112,7 @@ Irrégulier :
 - する -> <span style="color:red">させる</span>
 - 来る -> <span style="color:red">来される</span>
 
-## 9. 使役受身：～（さ）さられる・～される
+## 9. 使役受身：～（さ）さられる・～される <a name="chapter_0_9"></a>
 
 1er : 
 
@@ -128,7 +128,7 @@ Irrégulier :
 
 # 第1課 <a name="chapter_1"></a>
 
-## 1. 合成語：～口
+## 1. 合成語：～口 <a name="chapter_1_1"></a>
 
 1. 人や物が出入りする所。駅や建物などで、よく使われる。
 2. 移動動詞、役割、方角（東西南北）の言葉と一緒によく使われる。
@@ -136,7 +136,7 @@ Irrégulier :
 	- 役割 (rôle) : 改札口、みどりの窓口
 	- 方角 (direction) : 東口
 	
-## 2. ～って / ～て
+## 2. ～って / ～て <a name="chapter_1_2"></a>
 
 ＊引用(citation)の「と」（ex ~と言う / ～と思う）の話し言葉。   
 ＊注意書きや看板などの読み方や意味を尋ねるとき使われる。
@@ -150,7 +150,7 @@ Irrégulier :
 > マルタン：すみません、さっきのアナウンスは何<span style="color:red">て</span>言っていたんですか。  
 > 横にいる人：事故で電車が遅れている<span style="color:red">って</span>言っていましたよ。
 
-## 3. Vはいい
+## 3. Vはいい <a name="chapter_1_3"></a>
 
 ＊「Vばいいですか」…助言(conseil)や指示(indication)がほしい時にする質問の言い方。（「みんなの日本語初級」L35）   
 ＊「Vばいい」…そうすることがいい考えだと勧める言い方。
@@ -187,7 +187,7 @@ Irrégulier :
 - いろいろな頼み方が工夫できる
 - 簡単な手紙文が書ける
 
-## 1. 助詞「に」の使い方
+## 1. 助詞「に」の使い方 <a name="chapter_3_1"></a>
 ### 「人＋に」：「その人が～」の意味。
 
 1. 可能の意味 (capacité, possibilité)（「～が」と言い換えられる）
@@ -208,7 +208,7 @@ Irrégulier :
 <!-- -->
 >この数学の問題は、中学生<span style="color:red">には</span>難しい。
 
-## 2. 助詞の変化：が->の
+## 2. 助詞の変化：が->の <a name="chapter_3_2"></a>
 - Dans la proposition déterminante
 
 >これは<u>父｛が/の｝かいた</u>絵です。
@@ -226,7 +226,7 @@ Irrégulier :
 <!-- -->
 >地下鉄{❌の/✅が}遅れたので、学校に遅刻した。
 
-## 3. ～ことになる / ～ことにする
+## 3. ～ことになる / ～ことにする <a name="chapter_3_3"></a>
 
 ### ことになる -> 決めるのは自分ではない*
 
@@ -267,7 +267,7 @@ Vdico / Vない + このにしている
 <!-- -->
 >食事のときは、たばこを吸わない<span style="color:red">ことにしている</span>。
 	
-## 4. 省略 Omission（　）
+## 4. 省略 Omission（　）<a name="chapter_3_4"></a>
 
 文を最後まで言わないことがある。
 	
@@ -280,7 +280,7 @@ Vdico / Vない + このにしている
 >内田　：マリーさん、日本語上手になりましたね。
 マリー：いええ、まだまだです。もっと勉強し<span style="color:red">ないと</span>（いけません）。
 	
-## 5. 普通形(V/い ajd) / な adj な / Nを + ものですから: 「～から/ので」
+## 5. 普通形(V/い ajd) / な adj な / Nを + ものですから: 「～から/ので」<a name="chapter_3_5"></a>
 <原因・理由>  
 普通形の会話のとき->「～ものだから」「～もんだから」
 
@@ -295,7 +295,7 @@ Vdico / Vない + このにしている
 - ❗18歳になった｛✅から・✅ので・❌ものだから｝、車の運転ができますね。
 - ❗忙しい｛✅から・✅ので・❌ものですから｝手伝ってください。
 
-## 6. Vて＋いただけないでしょうか
+## 6. Vて＋いただけないでしょうか <a name="chapter_3_6"></a>
 とても丁寧な表現->上司・知らない人・親しくない人へのお願い。
 
 >電子辞書の使い方を教え<span style="color:red">ていただけないでしょうか</span>。
@@ -314,7 +314,7 @@ Vdico / Vない + このにしている
 	 9. 教えろ
 	 低
 	 
-## 7. ただ＋Vdico＋だけでいい
+## 7. ただ＋Vdico＋だけでいい <a name="chapter_3_7"></a>
 ＊ただ：seulement　＊～だけでいい：il suffit de ~
 
 >川田：マリーさん、フランス語を教えていただけないでしょうか。  
@@ -324,7 +324,7 @@ Vdico / Vない + このにしている
 >町田：このスマホで写真をとる時は、どうすればいいんですか。  
 青山：<span style="color: red">ただ</span>このボタンを押す<span style="color: red">だけでいい</span>んですよ。
  
-## 8 助詞＋は : Emphase
+## 8 助詞＋は : Emphase <a name="chapter_3_8"></a>
 
 
 - 「を」「が」-> 「<s>を</s>＋は」「<s>が</s>＋は」
@@ -347,7 +347,7 @@ Vdico / Vない + このにしている
 <!-- -->
 >　田中さんと<span style="color:red">は</span>、一緒にフランスへ出張したこがある。
 
-## 9 連用中止 (「中級へ行こう」L5)
+## 9 連用中止 (「中級へ行こう」L5） <a name="chapter_3_9"></a>
 
 
 V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なadj<s>な</s>->であり / N＋であり
@@ -413,7 +413,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 
 # 第4課 <a name="chapter_4"></a>
 
-## 1. 文脈指示：あれ/あの/それ/その (会話）
+## 1. 文脈指示：あれ/あの/それ/その (会話）<a name="chapter_4_1"></a>
 
 - ア -> 話し手も聞き手も知っている場合 / ひとりごと
 - ソ -> 話し手か、聞き手か、どちらか一人だけが知っている場合 / 二人とも知らない場合
@@ -472,7 +472,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 
 &emsp;&emsp;（中川さん：知っている・長島さん：知らない）
 
-## 2. Nのところ
+## 2. Nのところ <a name="chapter_4_2"></a>
 
 その人や物が「いる/ある場所、その近く、会社など所属する
 (faire partie de)ところ」の意味。
@@ -496,7 +496,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 > 夏目：来週のミーティング、三島さん<span style="color:red">のところ</span>で出来ますか。
 > 三島：大丈夫ですよ？じゃあ、会議を予約しておきます。
 
-## 3. V(さ)せていただけたい：Vcausatif＋ていただけたい
+## 3. V(さ)せていただけたい：Vcausatif＋ていただけたい <a name="chapter_4_3"></a>
 
 何かをしようという気持ちや許可のお願い、目上の人に強く伝える。
 
