--- a/2021-2022.md
+++ b/2021-2022.md
@@ -516,3 +516,25 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 > 頭が痛いので、帰ら<span style="color:red">せていただきたい</span>んですが。
 <!-- -->
 > 子供が病気なので、休ま<span style="color:red">せていただきたい</span>んですか。
+
+## 4. 「なさる」の命令形(forme impérative）<a name="chapter_4_4"></a>
+
+＊　V<s>ます</s>＋なさい
+
+1. 命令の表現：
+	- 親 -> 子供
+	> 母：花子、遊んでいないで、宿題をし<span style="color:red">なさい</span>。
+	- 先生 -> 生徒
+	> 先生：中川君、英語の点がよくないですね。次のテストは、頑張り<span style="color:red">なさい</span>。
+	- 上司 -> 部下
+	> 部長：田中さん、顔色がよくないよ。残業しないで早く帰り<span style="color:red">なさい</span>。
+	
+2. 丁寧な命令の表現。相手がしなければならないことの指示をする。
+
+> 試験問題の指示：次の漢字の読み方を書き<span style="color:red">なさい</span>。
+
+<!-- -->
+> 試験問題の指示：(　）の中に正しい助詞を入れ<span style="color:red">なさい</span>。
+
+<!-- -->
+> パトカーからの指示：そこの車、止まり<span style="color:red">なさい</span>！
