--- a/2021-2022.md
+++ b/2021-2022.md
@@ -538,3 +538,29 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 
 <!-- -->
 > パトカーからの指示：そこの車、止まり<span style="color:red">なさい</span>！
+
+## 5 V普通形＋の？
+
+> A：旅行へ<span style="color:red">行くの？</span>↗️（＝行くんですか？）
+
+> B：うん。
+
+> A：どこへ<span style="color:red">行くの？</span>↗️（＝行くんですか？）
+
+> B：アメリカへ<span style="color:red">行くの</span>↘️（＝行くんだ）
+
+<!-- -->
+> A：ケータイをなくしたんですか。/ ケータイをなくしたの？
+
+> B：どこかて落としたんです。/ どこかで落としたの。
+
+> A：どこで失くしたんですか。/ どこで失くしたの？
+
+> B：わかりません。/ わからないの。
+
+<!-- -->
+> A：どうしたんですか。/ どうしたの？
+
+> B：気分が悪いんですか。/ 気分がわるいの？
+
+> C：頭が痛いんです。 / 頭が痛いの。
