--- a/2021-2022.md
+++ b/2021-2022.md
@@ -539,7 +539,7 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 <!-- -->
 > パトカーからの指示：そこの車、止まり<span style="color:red">なさい</span>！
 
-## 5 V普通形＋の？
+## 5. V普通形＋の？<a name="chapter_4_5"></a>
 
 > A：旅行へ<span style="color:red">行くの？</span>↗️（＝行くんですか？）
 
@@ -564,3 +564,65 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 > B：気分が悪いんですか。/ 気分がわるいの？
 
 > C：頭が痛いんです。 / 頭が痛いの。
+
+## 6. Vてくる・Vていく <a name="chapter_4_6"></a>
+
+ -- てくる --> 🧔🏻 -- ていく -->
+ 
+> 私は2時間前にお昼ご飯を食べました。食べた時はお腹がいっぱいでしたが・・たんたんお腹がすい<span style="color:red">てきました</span>。
+ 
+<!-- -->
+> 10月になりました。最近寒くなっ<span style="color:red">てきました</span>。（9月ちょっと寒い ↗️ 10月もっと寒い）
+ 
+<!-- -->
+> 雨が降るから傘をもっていった方がいいよ。（まだ降っていません）
+  
+ 
+## 7. がする  <a name="chapter_4_7"></a>
+  
+- をする（アクセサリー、けが）
+	- 時計をする
+	- ネクタイをする
+	- けがをする
+	- やけどをする`
+
+- にする（買う、頼む、食べる）
+	- すしにする
+	- ビールにする
+	- あのかばんにする`
+
+- がする (音、声、匂い、味、病気）
+
+	> あれ？家の中で、水の音が聞こえます。（＝水の<span style="color:red">音がします</span>）
+	
+	<!-- -->
+	>  もう12時なのに、大きい声が聞こえます。（＝大きい<span style="color:red">声がします</span>）
+	
+	<!-- -->
+	> いいにおい。ガレーですね？（カレーの<span style="color:red">においがします</span>）
+		
+	<!-- -->
+	> カレーを作りましたが、しっぱいしました。（＝変な<span style="color:red">味がします</span>）
+		
+	<!-- -->
+	> 今日は暑いのに、私は寒いです。病気かもしれません。（＝<span style="color:red">寒気がします</span>）
+	
+	<!-- -->
+	> 昨日、ワインを2本飲んでしまいました。今朝から、気もちが悪いです。（＝<span style="color:red">吐きがします</span>）
+	
+	<!-- -->
+	> ジェットコースターに乗りました。立てません。（＝<span style="color:red">めまいがします</span>）
+	
+## 8. Aな / N + である＝です  <a name="chapter_4_8"></a>
+
+＊雑誌や新聞の文章で使われます。
+
+❗️ 自分自身の意見をいう時には使いません。
+
+> 新聞に書いてありました。「フランスでは KPOP が人気<span style="color:red">である</span>」
+
+<!-- -->
+> 旅行の雑誌を読みます。「去年、日本人が一番旅行した区には台湾<span style="color:red">である</span>」
+
+<!-- -->
+> 世界のレポートを読みます。「世界で一番長く生きるのは日本人<span style="color:red">である</span>」
