Add missing lessong 3_1 & 3_2

--- a/2021-2022.md
+++ b/2021-2022.md
@@ -187,7 +187,84 @@ Irrégulier :
 - いろいろな頼み方が工夫できる
 - 簡単な手紙文が書ける
 
-## 1. 助詞「に」の使い方 <a name="chapter_3_1"></a>
+## 1. 縮約形 (contraction) <a name="chapter_3_1"></a>
+
+＊話し言葉。丁寧な言い方ではない。
+
+- Vてしまう -> Vちゅう
+
+	～<span style="color:red">て</span>しまった ->  ～<span style="color:red">ち</span>ゃった
+	
+	～<span style="color:red">で</span>しまった -> ～<span style="color:red">じ</span>ゃった
+	
+	> ケータイ、忘れ<span style="color:red">ちゃった</span>。困ったな。
+	
+	<!-- -->
+	> おととい買った本、おもしろくてもう読ん<span style="color:red">じゃった</span>。
+	
+- Vておく -> Vとく
+
+	買っておいてください -> 買っ<span style="color:red">といて</span>ください
+
+	> 部長：田中さん、コピーの紙がもうないから、買っ<span style="color:red">といて</span>ください。
+
+	> 田中：はい、わかりました。
+	
+	<!-- -->
+	> 森田（同僚）：田中さん。これ、明日の会議の資料だから、読ん<span style="color:red">どいて</span>。
+	
+	> 田中（同僚）：了解。
+	
+- Vている -> Vてる / Vていて（ください）-> Vてて
+
+	食べている -> 食べ<span style="color:red">てる</span>
+	
+	待っていてください -> まっ<span style="color:red">てて</span>
+	
+	> 弟：お姉ちゃん、宿題教えて。
+	
+	> 姉：今、ネットフリックスの映画を見<span style="color:red">てる</span>から、後で。
+	
+	<!-- -->
+	> 妹：みどりの窓口で切符を買ってくるから、このかばん持っ<span style="color:red">てて</span>。
+	
+	> 兄：あまり時間がないから急いで。
+	
+	<!-- -->
+	> 今日は遅くなるから、先に晩ご飯食べ<span style="color:red">てて</span>。
+	
+- それでは -> それじゃ
+
+	> 花子：あ、もう10時！楽しくて長話をしちゃった。<span style="color:red">それじゃ</span>、今日はこのへんで。
+	
+	> 真理子：私も楽しかった。電話してくれて、ありがとう。またね。
+
+## 2. Vて＋ほしい / Vないで＋ほしい (N1-2, L16) <a name="chapter_3_2"></a>
+
+＊強い言い方にならないように、「Vてほしいんですが」。
+
+＊丁寧な言い方は「Vていただきたいんですが」。上司や目上の人に使われる。
+
+> マリー：すみません。新幹線の切符の買い方を教え<span style="color:red">てほしい</span>んですが。
+
+> 春子：これから駅まで行くので、一緒に買いましょう。
+
+> マリー：ありがとうございます。
+
+<!-- -->
+> 母：守君、パーティーの準備を伝えっ<span style="color:red">てほしい</span>んだけと・・・。
+
+> 守：いいよ、じゃあ、このお皿を運ぶね。 
+
+<!-- -->
+> 内田：課長、お忙しい時にすみません。明日のご予定を教え<span style="color:red">ていただきたい</span>んですが。
+
+> 課長：明日は、10時から12時まで外出しますが、午後はずっとオフィスにいますよ。
+
+> 内田：わかりました。ありがとうございます。
+
+
+## 3. 助詞「に」の使い方 <a name="chapter_3_3"></a>
 ### 「人＋に」：「その人が～」の意味。
 
 1. 可能の意味 (capacité, possibilité)（「～が」と言い換えられる）
@@ -208,7 +285,7 @@ Irrégulier :
 <!-- -->
 >この数学の問題は、中学生<span style="color:red">には</span>難しい。
 
-## 2. 助詞の変化：が->の <a name="chapter_3_2"></a>
+## 4. 助詞の変化：が->の <a name="chapter_3_4"></a>
 - Dans la proposition déterminante
 
 >これは<u>父｛が/の｝かいた</u>絵です。
@@ -226,7 +303,7 @@ Irrégulier :
 <!-- -->
 >地下鉄{❌の/✅が}遅れたので、学校に遅刻した。
 
-## 3. ～ことになる / ～ことにする <a name="chapter_3_3"></a>
+## 5. ～ことになる / ～ことにする <a name="chapter_3_5"></a>
 
 ### ことになる -> 決めるのは自分ではない*
 
@@ -267,7 +344,7 @@ Vdico / Vない + このにしている
 <!-- -->
 >食事のときは、たばこを吸わない<span style="color:red">ことにしている</span>。
 	
-## 4. 省略 Omission（　）<a name="chapter_3_4"></a>
+## 6. 省略 Omission（　）<a name="chapter_3_6"></a>
 
 文を最後まで言わないことがある。
 	
@@ -280,7 +357,7 @@ Vdico / Vない + このにしている
 >内田　：マリーさん、日本語上手になりましたね。
 マリー：いええ、まだまだです。もっと勉強し<span style="color:red">ないと</span>（いけません）。
 	
-## 5. 普通形(V/い ajd) / な adj な / Nを + ものですから: 「～から/ので」<a name="chapter_3_5"></a>
+## 7. 普通形(V/い ajd) / な adj な / Nを + ものですから: 「～から/ので」<a name="chapter_3_7"></a>
 <原因・理由>  
 普通形の会話のとき->「～ものだから」「～もんだから」
 
@@ -295,7 +372,7 @@ Vdico / Vない + このにしている
 - ❗18歳になった｛✅から・✅ので・❌ものだから｝、車の運転ができますね。
 - ❗忙しい｛✅から・✅ので・❌ものですから｝手伝ってください。
 
-## 6. Vて＋いただけないでしょうか <a name="chapter_3_6"></a>
+## 8. Vて＋いただけないでしょうか <a name="chapter_3_8"></a>
 とても丁寧な表現->上司・知らない人・親しくない人へのお願い。
 
 >電子辞書の使い方を教え<span style="color:red">ていただけないでしょうか</span>。
@@ -314,7 +391,7 @@ Vdico / Vない + このにしている
 	 9. 教えろ
 	 低
 	 
-## 7. ただ＋Vdico＋だけでいい <a name="chapter_3_7"></a>
+## 9. ただ＋Vdico＋だけでいい <a name="chapter_3_9"></a>
 ＊ただ：seulement　＊～だけでいい：il suffit de ~
 
 >川田：マリーさん、フランス語を教えていただけないでしょうか。  
@@ -324,7 +401,7 @@ Vdico / Vない + このにしている
 >町田：このスマホで写真をとる時は、どうすればいいんですか。  
 青山：<span style="color: red">ただ</span>このボタンを押す<span style="color: red">だけでいい</span>んですよ。
  
-## 8 助詞＋は : Emphase <a name="chapter_3_8"></a>
+## 10 助詞＋は : Emphase <a name="chapter_3_10"></a>
 
 
 - 「を」「が」-> 「<s>を</s>＋は」「<s>が</s>＋は」
@@ -347,7 +424,7 @@ Vdico / Vない + このにしている
 <!-- -->
 >　田中さんと<span style="color:red">は</span>、一緒にフランスへ出張したこがある。
 
-## 9 連用中止 (「中級へ行こう」L5） <a name="chapter_3_9"></a>
+## 11 連用中止 (「中級へ行こう」L5） <a name="chapter_3_11"></a>
 
 
 V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なadj<s>な</s>->であり / N＋であり
