Add missing lesson 1_4 & 1_5

--- a/2021-2022.md
+++ b/2021-2022.md
@@ -177,8 +177,40 @@ Irrégulier :
 > マルタン：明日のテニスの試合、もうし雨が降ったら、とうすれ<span style="color:red">ばいい</span>  ですか。  
 > 村山：室内のコートがありますから、そこで試合をすれ<span style="color:red">ばいい</span>  ですよ。
 
-# 第2課 <a name="chapter_2"></a>
+## 4. ～というのは・・・っていうことだ <a name="chapter_1_4"></a>
 
+＊言葉の意味の説明。
+
+> デュポン：あそこに書いてある「終日禁煙」って、どういう意味ですか。
+
+> 秋山：「終日禁煙」<span style="color:red">というのは</span>、一日中たばこをす<span style="color:red">ってはいけないっていうこです</span>。
+
+> でュポン：そうですか。今は、たばこをすえない場所が多いですね。
+
+<!-- -->
+> 「不便」<span style="color:red">とういのは</span>、便利じゃない<span style="color:red">ということです</span>。
+
+## 5. 外来語：外国がら入って来た言葉 <a name="chapter_1_5"></a>
+
+１. カタカナで書く。  
+❗　カタカナでも外来語ではない言葉があるので注意。  
+ex. オノマトペ、動物や植物のなめドヤをドンドンたたく。動物園にトラやクマがいる。
+
+2. 日本語の発音にして書かれる。短くすることもある。  
+ガラス　クライアント　プライド　グルメ  
+パソコン（＝パーソナルコンピューター）  
+ワープロ（＝ワードプロセッサー）  
+
+3. もとの言葉と意味が違うもの、一部分の意味を表すもの、和製外来語（日本語で作られた外来語）などもある。  
+アベック　シャンソン　ジーパン　ガソリンスタンド
+
+4. 形容詞として使われる場合 -> な形容詞  
+動詞として使われる -> 外来語＋（を）する  
+ex. サンプル<span style="color:red">な</span>デザインの車  
+パーティー<span style="color:red">をします</span>　ドライブ<span style="color:red">する</span>
+
+
+# 第2課 <a name="chapter_2"></a>
 
 # 第3課 <a name="chapter_3"></a>
 
