Add all lessons objectives

--- a/2021-2022.md
+++ b/2021-2022.md
@@ -128,6 +128,12 @@ Irrégulier :
 
 # 第1課 <a name="chapter_1"></a>
 
+## 学習目標
+
+1. 漢字の読み方や言葉の意味が尋ねられる
+2. 聞き取れなかった内容が尋ねられる
+3. 看板や表示を読んで、意味が確認できる
+
 ## 1. 合成語：～口 <a name="chapter_1_1"></a>
 
 1. 人や物が出入りする所。駅や建物などで、よく使われる。
@@ -212,12 +218,18 @@ ex. サンプル<span style="color:red">な</span>デザインの車
 
 # 第2課 <a name="chapter_2"></a>
 
+## 学習目標
+
+1. 遅刻や休みの連絡ができる
+2. 伝言が頼める
+3. ファックスの内容が読める
+
 # 第3課 <a name="chapter_3"></a>
 
-## 目標
-- 何かを頼む前に、理由が説明できる
-- いろいろな頼み方が工夫できる
-- 簡単な手紙文が書ける
+## 学習目標
+1. 何かを頼む前に、理由が説明できる
+2. いろいろな頼み方が工夫できる
+3. 簡単な手紙文が書ける
 
 ## 1. 縮約形 (contraction) <a name="chapter_3_1"></a>
 
@@ -521,6 +533,12 @@ V<s>ます</s> / いadj<s>い</s>->く / なadj<s>な</s>->で / N＋で / なad
 > 朝起きたら雨が降って<span style="color:red">おり</span>、試合は中止になった。
 
 # 第4課 <a name="chapter_4"></a>
+
+## 学習目標
+
+1. 丁寧に許可を求めることができる
+2. 許可が欲しい理由をきちんと説明できる
+3. 許可願いの申請書が正しく書ける
 
 ## 1. 文脈指示：あれ/あの/それ/その (会話）<a name="chapter_4_1"></a>
 
