Start adding lessong 2_1 & 2_2

--- a/2021-2022.md
+++ b/2021-2022.md
@@ -224,6 +224,109 @@ ex. サンプル<span style="color:red">な</span>デザインの車
 2. 伝言が頼める
 3. ファックスの内容が読める
 
+## 1. ほど <a name="chapter_2_1"></a>
+
+＊ 数量＋ほど  
+「ほど」…「くらい」よりも、少しフォーマルなニュアンス。書き言葉でよく用いれる。  
+❗ 時刻・日付には使えない。  
+ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
+
+> お待たせして申し訳ありません。あと5分<span style="color:red">ほど</span>、お待ちください。
+
+<!-- -->
+> パソコンの修理には2週間<span style="color:red">ほど</span>かかる。
+
+<!-- -->
+> 日本で私立大学に行く場合、4年間で５００万円<span style="color:red">ほど</span>必要だ。
+
+<!-- -->
+> 急に飲み会が決まったので、来たのは10人<span style="color:red">ほど</span>だった。
+
+## 2. V<s>ます</s>＋そうだ（「みんなの日本語初級」L43）<a name="chapter_2_2"></a>
+
+＊～そうです：目で見た様子を伸びる表現。
+
+1. 動詞(mouvement)＋そうだ：  
+	これから動きや変化が起きそうな様子。  
+	❗ 意志(volonté)を表さない動詞（ex. なる、始まる、増える）
+2. 形容詞 / 動詞(état)＋そうだ：  
+	外から見て、そういう状態・性質に思える。  
+	étatの動詞…存在の動詞（ある、いる）、可能の意味のある動詞（わかる、できる）、可能動詞（読める、食べられる）など。
+
+<!-- -->
+- 形容詞：いadj<s>い</s> / なadj<s>な</s>＋そうです
+- 否定形：
+	- 形容詞：～なさそうだ・～そうではない
+	- 動詞：～そうもうない・～そうにない・～そうにもない
+
+<table>
+	<tr>
+		<th>いadj</th>
+		<td>
+			おいしそうだ<br>
+			おいしそうだった
+		</td>
+		<td>
+			おいしくなさそうだ<br>
+			おいしくなさそうだった
+		</td>
+	</tr>
+	<tr>
+		<th>なadj</th>
+		<td>
+			簡単そうだ<br>
+			簡単そうだった
+		</td>
+		<td>
+			簡単ではなさそうだ<br>
+			簡単ではなさそうだった
+		</td>
+	</tr>
+	<tr>
+		<th>動詞</th>
+		<td>
+			始まりそうだ<br>
+			始まりそうだった<br>
+			<br>
+			ありそうだ<br>
+			ありそうだった
+		</td>
+		<td>
+			始まりそうもない<br>
+			始まりそうもなかった<br>
+			<br>
+			なさそうだ / ありそうもない<br>
+			なさそうだった / ありそうもなかった
+		</td>
+	</tr>
+</table>
+
+- 変化のすぐ前
+
+> ペンが落ち<span style="color:red">そうです</span>。
+
+<!-- -->
+> 空が暗い。雨が降り<span style="color:red">そうだ</span>。
+
+<!-- -->
+> ボタンがとれ<span style="color:red">そうです</span>。
+
+<!-- -->
+> 夜、道に迷った時、こわくで、泣き<span style="color:red">そうだった</span>。
+
+<!-- -->
+> 彼女の演奏が始まり<span style="color:red">そうだ</span>。
+
+- 近い将来に起こりそうなこと
+
+> 毎日忙しくて、お昼ご飯を食べる時間もないし、寝る時間も少ない。病気になり<span style="color:red">そうです</span>。
+
+<!-- -->
+> 今日はストで、雨車がほとんどありません。始業時間に間に合い<span style="color:red">そうもないです</span>。
+
+<!-- -->
+> 先月、足にけがをしたが、もうあまり痛くないので、一週間後にはジョギングが出来<span style="color:red">そうだ</span>。
+
 # 第3課 <a name="chapter_3"></a>
 
 ## 学習目標
