--- a/2021-2022.md
+++ b/2021-2022.md
@@ -327,6 +327,163 @@ ex. 12時｛❌ほど /✅ ごろ｝　10月1日｛❌ほと / ✅ごろ｝
 <!-- -->
 > 先月、足にけがをしたが、もうあまり痛くないので、一週間後にはジョギングが出来<span style="color:red">そうだ</span>。
 
+## 3. 普通形 / なadj<s>な</s> / N<s>だ</s>＋でしょうか <a name="chapter_2_3"></a>
+
+- 「～ですか / ますか」の丁寧な言い方
+
+> 店員：こちらのシャツは、いかが<span style="color:red">でしょうか</span>。
+
+> 客：そうですね。これ、試着できますか。
+
+<!-- -->
+> マルタン：もしもし、技術部のマルタンですが、中山さんはいらっしゃいますか。
+
+> 田中：申し訳ありません。中山は、ただいま外出中です。
+
+> マルタン：いつごろお戻りになる<span style="color:red">でしょうか</span>。
+
+> 田中：4時ごろには戻ると思います。
+
+> マルタン：わかりました。またお電話します。
+
+- 許可をもらう場合（丁寧にお願いする）->　Vてもいいでしょうか / Vてもよろしいでしょうか
+
+> マルタン：すみません、この辞書、ちょっとお借りしてもいい<span style="color:red">でしょうか</span>。
+
+> 山田：ええ、どうぞ。
+
+> 西川：課長、明日病院に行きたいので、午後から出社してもよろしい<span style="color:red">でしょうか</span>。
+
+> 課長：わかりました。2時の会議には出席できますよね。
+
+> 西川：はい、大丈夫です。ありがうございます。
+
+## 4. あいにく <a name="chapter_2_4"></a>
+
+＊物事が思うとおりに進まなくて、残念だという気持ちを表す。
+
+1. 「あいにく＋都合の悪い状況」よく一緒に使われる表現  
+～ちゅう、～ている  
+～てきた、～なった、～たばかり  
+～雨、休み
+
+2. 相手に都合が悪い状態（A)、自分に都合が悪い状態（B)でも、どちらでも使える。  
+
+(A)
+> 林：山本さん、一緒にケーキを食べませんか。
+
+> 山本：<span style="color:red">あいにく</span>、お昼ご飯を食べたばかりで、お腹がいっぱいで…。すみません。
+
+<!-- -->
+> 客： 広告でみた、青いセーターがほしいんですが。
+
+> 店員：申し訳ありません。<span style="color:red">あいにく</span>、売りきれてしまったんですか…。
+
+(B)
+> 美術館へ行ったら、<span style="color:red">あいにく</span>休館日だった。
+
+> 3月にスキーに行くつもりだったが、<span style="color:red">あいにく</span>ロックダウンになって行けなかった。
+
+## 5. ～と伝えていただきたい  <a name="chapter_2_5"></a>
+
+＊伝言を頼む時の、とても丁寧な言い方。
+
+> 中山：田中さんに、部長の日本出張は10月20日から28日に決まった<span style="color:red">と伝えていただきたい</span>んですが…。
+
+> 高木：わかりました。そう伝えます。
+
+<!-- -->
+> デュポン：もしもし、林先生のお宅ですか。
+
+> 林夫人：はい、そうです。
+
+> デュポンと申しますがが、林先生はいらっしゃいますか。
+
+> 林夫人：あいにく、ちょうっと出かけております。
+
+> そうですか…。では、すみませんが、JLPTのN3に合格した<span style="color:red">と伝えていただきたい</span>んですが…。
+
+> 林夫人：そうですか。おめでとうございます。主人が戻りました、そのように*伝えておきます。
+
+
+\* 「そう」より、「そのように」のほうが丁寧な言い方。
+
+## 6. ～ということですね  <a name="chapter_2_6"></a>
+
+＊聞いている人が繰り返して確認する表現。  
+聞いている人と話している人の関係によって、表現が変わる。
+
+例：
+<table>
+	<tr>
+		<td>話し手：お願いする文</td>
+		<td>聞き手：繰り返して確認する文</td>
+	<tr>
+	<tr>
+		<td>[ ⬇️ ]と伝えてほしんですが。 </td>
+		<td>はい。[ ⬇️  ]ということですね。</td>
+	</tr>
+	<tr>
+		<td>
+			～てください <br>
+			～てほしい<br>
+			 ～する<br>
+			 事実
+		 </td>
+		 <td>
+		 	～するように <br>
+		 	～てほしい / するように <br>
+		 	～尊敬の表現（ex. ～される） <br>
+		 	～「事実」の繰り返し / 要約 <br>
+		 </td>
+	</tr>
+</table>
+
+上司の家に電話：
+>　林：山田部長に、受付で<span style="color:blue">お待ちください</span>と伝えていただきたいんですが。
+
+> 山田の家族：はい、分かりました。受付で待つように(Vdico＋ように）<span style="color:red">というとこですね</span>。
+
+友達の家へ電話：
+> 林：田中さんに、新宿駅西口で<span style="color:blue">待っていてほしい</span>と伝えていただきたいんですが。
+
+> 田中の家族：分かりました。新宿駅西口｛<span style="color:blue">待っていてほしい</span><span style="color:red">ということですね</span>　/　<span style="color:blue">待っているように</span><span style="color:red">というとこですね</span>｝。
+
+知らない人との会話：
+> 林：中川さん、私は来週の会議に<span style="color:blue">出席する</span>と伝えていただきたいんですが。
+
+> 中川の同僚：分かりました。来週の会議に<span style="color:blue">出席される</span><span style="color:red">>ということですね</span>。
+
+知らない人との会話
+> 林：砂糖さんに、会議は<span style="color:blue">3時からになった</span>と伝えていただきたいんですが。
+
+> 砂糖の同僚：会議は3時<span style="color:blue">から（になった）</span><span style="color:red">ということですね</span>。
+
+## 7. Nだけでなく、Nも　/　Vdicoだけでなく、Vdicoのも <a name="chapter_2_7"></a>
+
+> 林さんは、英語<span style="color:red">だけでなく、</span>フランス語<span style="color:red">も</span>話せます。
+
+<!-- -->
+> テニスは、見る<span style="color:red">だけでなく、</span>する<span style="color:red">のも</span>好きです。
+
+<!-- -->
+> 友人の結婚披露宴に招待された<span style="color:red">だけでなく、</span>スピーチ<span style="color:red">も</span>頼まれた。
+
+## 8. もし＋普通形 / なadj<s>な</s> ＋ なら（「中級へ行こう」第7課） <a name="chapter_2_8"></a>
+
+> 山田：天気予報によると、週末は雪が降るそうですよ。
+
+> スミス：本当ですか。鎌倉に行きたかったんですが、雪が降る<span style="color:red">なら</span>家にいます。
+
+<!-- -->
+> 中川：ジャックさん、来週みんなでボウリングに行きませんか。
+
+> ジャック：ボウリングですか。う～ん、したことがないので、できるかな…。
+
+> 中川：もし行く<span style="color:red">なら</span>、明後日までに、連絡してくださいね。
+
+
+
 # 第3課 <a name="chapter_3"></a>
 
 ## 学習目標
